@@ -18,5 +18,6 @@
     "0.18.45",
     "0.18.48",
     "0.18.49",
-    "0.18.51"
+    "0.18.51",
+    "1.0.6"
 ]
